# NumericalMethods

./: .travis.yml  NumericalMethods.cabal  README.md  quickcheck-tests.hs
src/: Main.hs
src/NumericalMethods/: Simple.hs
