name: NumericalMethods
version: 0.0.1
cabal-version: >= 1.12
build-type: Simple
license: GPL-2
description:
    Used to learn how to do numerical methods.
author: Robert F. Dickerson

executable NumericalMethods
    main-is: Main.hs
    build-depends:
        base,
        containers >=0.5 && <0.6,
        vector,
        bytestring
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-NumericalMethods
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
