Name:           NumericalMethods
Version:        0.0.1
Synopsis:       Used to learn how to do numerical methods.
License:        MIT
License-File:   LICENSE
Cabal-Version:  >= 1.8
Author:         Robert F. Dickerson <rfdickerson@us.ibm.com>
Maintainer:     Robert F. Dickerson <rfdickerson@us.ibm.com>
Stability:      experimental
Build-Type:     Simple

Library
    Exposed-Modules:  NumericalMethods.Simple
    build-depends:
        base >= 4.5 && < 5,
        containers >=0.5 && <0.6,
        vector,
        bytestring
    Hs-Source-Dirs: src
    ghc-options: -Wall
    extensions: CPP

test-suite test-NumericalMethods
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
