Name:           NumericalMethods
Version:        0.0.1
Synopsis:       Used to learn how to do numerical methods.
License:        MIT
License-File:   LICENSE
Cabal-Version:  >= 1.8
Author:         Robert F. Dickerson <rfdickerson@us.ibm.com>
Maintainer:     Robert F. Dickerson <rfdickerson@us.ibm.com>
Stability:      experimental
Build-Type:     Simple

Library
    Exposed-Modules:  NumericalMethods.Simple
    build-depends:
        base >= 4.5 && < 5,
        containers >=0.5 && <0.6,
        vector,
        bytestring
    Hs-Source-Dirs: src
    ghc-options: -Wall -O2 -threaded -eventlog


Executable TestNumerics
        main-is: Main.hs
        Hs-Source-Dirs: src
        build-depends:
                      base >= 4.5 && < 5,
                      NumericalMethods
        ghc-options: -Wall -rtsopts -threaded             

                

Test-Suite quickcheck
    type:           exitcode-stdio-1.0
    main-is:        quickcheck-tests.hs
    GHC-Options:    -O2
    build-depends:  QuickCheck >= 2.4.2,
                    NumericalMethods,
                    base >= 4.5 && < 5
